tests/fixtures/effect-compiler/errors/EFX1004.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
      properties:
        x: { value:1, target: a.x }
}%

CCProgram vs %{
  precision mediump float;
  uniform UBO {
    vec4 a;
  };
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
